[package]
name = "rustogram"
version = "0.1.3"
authors = ["Mark Price <mail@epickrram.com>"]

description = "A rust port of HdrHistogram"

#documentation = "..."
homepage = "https://github.com/epickrram/rustogram"
repository = "https://github.com/epickrram/rustogram"

readme = "README.md"

keywords = ["histogram", "dynamic", "hdrhistogram", "statistics", "percentile"]

license = "Apache-2.0"
